feat: add script and docs for internetless installation

--- a/README
+++ b/README
@@ -7,6 +7,9 @@ PREREQUISITES
 
   ./bootstrap.sh check
 
+If you need to set up the platform on a server without internet
+access, please see SETUP WITHOUT INTERNET ACCESS below.
+
 INSTALLATION
 
   Use the installation script, which will:
@@ -34,5 +37,12 @@ USAGE
 
 SETUP WITHOUT INTERNET ACCESS
 
-S
-    docker save -o docker-images.tar $(docker-compose config | awk '{if ($1 == "image:") print $2;}' ORS=" ")
+After following the steps in INSTALLATION above on a machine with
+internet access, obtain a gzipped tarball of all images by running
+`scripts/tarball-images.sh`. Alternatively, request it from the
+Caffeine developers. Move the resulting `caffeine-images.tar.gz`
+to the server without internet access and load them with
+
+    gunzip -c caffeine-images.tar.gz | docker load
+
+Then proceed to the USAGE section above.
